--- a/First RazorPage/Pages/Index.cshtml
+++ b/First RazorPage/Pages/Index.cshtml
@@ -14,7 +14,8 @@
     <form>
         <p>
             <label>Full name: </label>
-            <input type="text" placeholder="Please enter your full name"/>
+            <input type="text" placeholder="Please enter your full name"
+            required="true"/>
         </p>
         <p>
             <label>Email address</label>
