--- a/First RazorPage/Pages/Index.cshtml
+++ b/First RazorPage/Pages/Index.cshtml
@@ -6,30 +6,30 @@
 
 <div class="text-center">
     <h1 class="display-4">Example Razor Pages</h1>
-    <h2>Akes Ali</h2>
+    <h2 id="result">@this.Model.FullName</h2>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
 
 <section>
-    <form>
+    <form method="POST">
         <p>
             <label>Full name: </label>
-            <input type="text" placeholder="Please enter your full name"
+            <input type="text" asp-for="FullName" placeholder="Please enter your full name"
             required="true"/>
         </p>
         <p>
             <label>Email address</label>
-            <input type="text" placeholder="Please enter your email address"
+            <input type="email" placeholder="Please enter your email address"
             required="true"/>
         </p>
         <p>
-            <button type="submit">Save</button>
+            <button type="Submit">Save</button>
         </p>
     </form>
     </section>
     <section>
         <p>
-            @ViewData["Message"];
+            @ViewData["Message"]
         </p>
         <p>
             Thank you for registering
