--- a/ASP-Razor-Movies/Pages/Shared/_Layout.cshtml
+++ b/ASP-Razor-Movies/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - ASP_Razor_Movies</title>
+    <title>@ViewData["Title"] - ASP Razor Movies</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ASP_Razor_Movies.styles.css" asp-append-version="true" />
@@ -39,7 +39,8 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - ASP_Razor_Movies - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2022 - ASP_Razor_Movies |
+            Akes Ali 
         </div>
     </footer>
 
